tests/baselines/reference/derivedClassWithPrivateInstanceShadowingProtectedInstance.errors.txt
tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassWithPrivateInstanceShadowingProtectedInstance.ts(14,13): error TS2416: Property 'fn' in type 'Derived' is not assignable to the same property in base type 'Base'.
  Type '() => string' is not assignable to type '() => string'. Two different types with this name exist, but they are unrelated.
    The 'this' types of each signature are incompatible.
      Type 'Base' is not assignable to type 'Derived'.
        Property 'x' is private in type 'Derived' but not in type 'Base'.


==== tests/cases/conformance/classes/members/inheritanceAndOverriding/derivedClassWithPrivateInstanceShadowingProtectedInstance.ts (1 errors) ====
    class Base {
        protected x: string;
        protected fn(): string {
            return '';
        }
    
        protected get a() { return 1; }
        protected set a(v) { }
    }
    
    // error, not a subtype
    class Derived extends Base {
        private x: string; 
        private fn(): string {
                ~~
!!! error TS2416: Property 'fn' in type 'Derived' is not assignable to the same property in base type 'Base'.
!!! error TS2416:   Type '() => string' is not assignable to type '() => string'. Two different types with this name exist, but they are unrelated.
!!! error TS2416:     The 'this' types of each signature are incompatible.
!!! error TS2416:       Type 'Base' is not assignable to type 'Derived'.
!!! error TS2416:         Property 'x' is private in type 'Derived' but not in type 'Base'.
            return '';
        }
    
        private get a() { return 1; }
        private set a(v) { }
    }
    